[metadata]
name = redis_job_queue
author = Chenyuan Zhang
author-email = zhangchenyuan009@gmail.com
summary = Distributed Job Queue implemented with Redis
description-file = README.md
home-page = https://github.com/ChenyuanZ/redis_job_queue
requires-python = >=3.6
classifier =
    Development Status :: 0 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
[files]
packages =
    redis_job_queue